# rag_mongodb

./: .cursorrules  .dockerignore  .env.example  .env.neuralcursor.example  .gitignore  AGENTS.md  CLAUDE.md  DARWINXML_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.vllm  EMBEDDING_SETUP.md  IMPLEMENTATION_COMPLETE.md  INGESTION_ANALYSIS_REPORT.md  INTEGRATION_COMPLETE.md  MANIFEST.in  NEURALCURSOR_PRD.md  NEURALCURSOR_README.md  README.md  TROUBLESHOOTING.md  docker-compose-search.yml  docker-compose.vllm.48gb.yml  docker-compose.vllm.yml  docker-compose.yml  pyproject.toml  run_claude_local.sh  start_services.py
.claude/: PRD.md
.claude/reference/: agent-tools.md  docling-ingestion.md  mongodb-patterns.md
.cursor/agents/: generate-agents.md  retro.md
.cursor/rules/: changelog-updates.mdc  (+1 more)
.github/: PRE_COMMIT_QUICK_START.md  copilot-instructions.md
docker/: litellm-config.yaml
docs/: changelog.md  darwinxml.md  deepwiki-frontend.md  design_patterns.md  pre-commit-hooks.md  reorg_project.md  validation-checklist.md  validation-implementation-summary.md  validation-phase1-implementation.md  vllm-claude-cli-setup.md  vllm-editor-config.md  vllm-editor-quickstart.md
examples/: .env.example  AGENTS.md  agent.py  cli.py  prompts.py  settings.py
frontend/: .env.example  AGENTS.md  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
neuralcursor/: AGENTS.md  QUICKSTART.md  README.md  __init__.py  cli.py  ingest_with_darwin.py  orchestrator.py  settings.py
sample/: AGENTS.md  IMPLEMENTATION_PROGRESS.md  PHASE3_TEST_RESULTS.md  PLAN.md  README.md  changelog.md  darwinxml_demo.py
scripts/: debug_vllm_request.sh  init_neuralcursor.py  run_brain_care.py  start_file_watcher.py  start_librarian.py  start_mcp_server.py  start_vllm.py  test_embedding.py  test_vllm_prompt.sh
setup/: setup_mongodb_tables.py
src/: AGENTS.md  agent.py  cli.py  cli_langgraph.py  dependencies.py  langgraph_agent.py  logging_config.py  prompts.py  providers.py  query.py  self_corrective_rag.py  settings.py  test_config.py  tools.py  validate_config.py  validation.py
temp/: AGENTS.md.docker-section-update.md  IMPLEMENTATION_SUMMARY.md  apply-compose-updates.sh  design_patterns.md.compose-section-update.md  docker-compose.vllm.48gb.yml.updated  docker-compose.vllm.yml.updated  docker-compose.yml.updated  init_indexes_simple.py  test_new_validations.py  test_rq_check.py
test_scripts/: AGENTS.md  additional_tests.py  check_cluster_info.py  check_indexes.py  check_version.py  comprehensive_e2e_test.py  gold_dataset.json  run_gold_eval.py  test_agent_e2e.py  test_rag_pipeline.py  validate_source_urls.py
tests/: test_darwinxml.py  test_protocol_compliance.py
(+357 files in other folders)
