[project]
name = "mongodb-rag-agent"
version = "0.1.0"
description = "Agentic RAG system with MongoDB Atlas Vector Search"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic-ai>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "pymongo",
    "openai>=1.58.0",
    "docling",
    "docling-core>=2.4.0",
    "transformers>=4.47.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "openai-whisper>=20240930; python_version < '3.12'",
    "crawl4ai",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]
