[project]
name = "mdrag"
version = "0.1.0"
description = "Agentic RAG system with MongoDB Atlas Vector Search"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic-ai>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "pymongo",
    "motor>=3.6.0",
    "openai>=1.58.0",
    "docling",
    "docling-core>=2.4.0",
    "transformers>=4.47.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "openai-whisper>=20240930; python_version < '3.12'",
    "crawl4ai",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.147",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "dc-logger>=1.2.1",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.1",
    "pyyaml>=6.0",
    "objprint>=0.2.3",
    "neo4j>=5.27.0",
    "watchdog>=6.0.0",
    "vllm>=0.7.0",
    "psutil>=6.1.0",
    "nvidia-ml-py>=12.560.0",
    "letta>=0.5.0",
    "mcp>=1.1.0",
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {mdrag = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mdrag*"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]

[tool.pyright]
extraPaths = ["src"]
